# libtt

./: CMakeLists.txt  README.md  libtt.gyp  package.json
.github/workflows/: test.yml
include/: tt.h
include/tt/: unix.h  win.h
src/: pty.c
src/unix/: pty.c
src/win/: console.h  pty.c
test/: CMakeLists.txt  kill.c  resize.c  spawn-bad-file.c  spawn-exit-status.c  spawn.c
test/fixtures/: sigint.mjs
